--- a/application-prod.properties
+++ b/application-prod.properties
@@ -1,4 +1,4 @@
-server.application.name=config-pro
+server.application.name=config-prod
 
 eureka.instance.prefer-ip-address=true
 eureka.client.fetch-registry=true
